<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/c_bg1">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/home_tab"
            android:paddingTop="5dip"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/home_iv"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/ic_launcher_background"/>
            <TextView
                android:id="@+id/home_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_tab"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cate_tab"
            android:paddingTop="5dip"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/cate_iv"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/ic_launcher_background"/>
            <TextView
                android:id="@+id/cate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cate_tab"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/social_tab"
            android:paddingTop="5dip"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/social_iv"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/ic_launcher_background"/>
            <TextView
                android:id="@+id/social_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_tab"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/shopping_tab"
            android:paddingTop="5dip"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/shopping_iv"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:background="@drawable/ic_launcher_background"/>
                <TextView
                    android:textColor="#ffffff"
                    android:text="10"
                    android:layout_gravity="right"
                    android:background="#ff00ff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <TextView
                android:id="@+id/shopping_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_tab"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/my_tab"
            android:paddingTop="5dip"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/my_iv"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="@drawable/ic_launcher_background"/>
            <TextView
                android:id="@+id/my_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_tab"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>